10117: fix alignment of filing fee column on mobile

--- a/web-client/src/styles/custom.scss
+++ b/web-client/src/styles/custom.scss
@@ -1091,6 +1091,14 @@ hr.lighter {
   }
 }
 
+.mobile-column-width-75 {
+  width: 75%
+}
+
+.mobile-column-width-25 {
+  width: 25%
+}
+
 .document-detail__action-buttons {
   .float-left {
     position: absolute;
